classDiagram
    class Shot{
        -int id
        -float accuracy
        -float angle
        -float trajectory
        +float get_accuracy()
        +float get_angle()
        +float get_trajectory()
    }
    
    class Video{
        -int id
        -str file_path
        -List[Shot] shots
        +List[Shot] get_shots()
        +void add_shot(Shot shot)
    }
    
    class ShotAnalyzer{
        +List[Shot] analyze_video(Video video)
        +Shot analyze_shot(Shot shot)
    }
    
    class Database{
        +void save_video(Video video)
        +Video get_video(int id)
        +List[Video] get_all_videos()
    }
    
    class API{
        +void upload_video(file_path: str) -> int
        +List[Shot] analyze_video(video_id: int) -> List[Shot]
    }
    
    class WebApp{
        +void show_video(video_id: int)
        +void show_analysis(video_id: int)
    }
    
    class Chart{
        +void show_accuracy_chart(shots: List[Shot])
        +void show_angle_chart(shots: List[Shot])
        +void show_trajectory_chart(shots: List[Shot])
    }
    
    class User{
        -str name
        -str role
        +void upload_video(file_path: str)
        +List[Shot] analyze_video(video_id: int)
    }
    
    class Coach{
        +void show_analysis(video_id: int)
    }
    
    class Player{
        +void upload_video(file_path: str)
    }
    
    class Analyst{
        +void show_analysis(video_id: int)
    }
    
    class Fan{
        +void show_analysis(video_id: int)
    }
    
    class Developer{
        +void upload_video(file_path: str)
        +List[Shot] analyze_video(video_id: int)
    }
    
    User <|-- Coach
    User <|-- Player
    User <|-- Analyst
    User <|-- Fan
    User <|-- Developer
    Coach *-- ShotAnalyzer
    Player *-- ShotAnalyzer
    Analyst *-- ShotAnalyzer
    Fan *-- ShotAnalyzer
    Developer *-- ShotAnalyzer
    API *-- ShotAnalyzer
    WebApp *-- API
    WebApp *-- Chart
    WebApp *-- Database
    WebApp *-- User
